--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.4",
     "react": "^19.2.4",
-    "@google/genai": "^1.42.0",
-    "lucide-react": "^0.575.0"
+    "react-dom": "^19.2.4",
+    "@google/genai": "1.42.0",
+    "lucide-react": "0.475.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
